@startuml

title __MYANDROIDNOTES.APP's Class Diagram__\n

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.AddActivity {
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.BuildConfig {
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.EditActivity {
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.MainActivity {
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.NoteDbOpenHelper {
    }
  }
  

  namespace com.example.myandroidnotes {
    class com.example.myandroidnotes.Notes {
    }
  }
  

  namespace com.example.myandroidnotes {
    namespace adapter {
      class com.example.myandroidnotes.adapter.MyAdapter {
      }
    }
  }
  

  namespace com.example.myandroidnotes {
    namespace util {
      class com.example.myandroidnotes.util.MyTimeUtil {
      }
    }
  }
  

  namespace com.example.myandroidnotes {
    namespace util {
      class com.example.myandroidnotes.util.ToastUtil {
      }
    }
  }
  

  namespace com.example.myandroidnotes {
    namespace util {
      class com.example.myandroidnotes.util.spfUtil {
      }
    }
  }
  

  com.example.myandroidnotes.AddActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myandroidnotes.AddActivity o-- com.example.myandroidnotes.NoteDbOpenHelper : mNoteDbOpenHelper
  com.example.myandroidnotes.EditActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myandroidnotes.EditActivity o-- com.example.myandroidnotes.NoteDbOpenHelper : mNoteDbOpenHelper
  com.example.myandroidnotes.EditActivity o-- com.example.myandroidnotes.Notes : note
  com.example.myandroidnotes.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myandroidnotes.MainActivity o-- com.example.myandroidnotes.adapter.MyAdapter : mAdapter
  com.example.myandroidnotes.MainActivity o-- com.example.myandroidnotes.NoteDbOpenHelper : mNoteDbOpenHelper
  com.example.myandroidnotes.NoteDbOpenHelper o-- com.example.myandroidnotes.Notes : mNote
  com.example.myandroidnotes.Notes .up.|> java.io.Serializable
  com.example.myandroidnotes.Notes -up-|> org.litepal.crud.LitePalSupport
  com.example.myandroidnotes.adapter.MyAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.myandroidnotes.adapter.MyAdapter o-- com.example.myandroidnotes.NoteDbOpenHelper : mNoteDbOpenHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
